--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewTaskActivity"></activity>
+        <activity android:name=".AddTask"></activity>
+        <activity android:name=".AddMilestoneActivity" />
+        <activity android:name=".ModifyTaskActivity" />
+        <activity android:name=".ModifyMilestoneActivity" />
+        <activity android:name=".ViewTaskActivity" />
         <activity android:name=".ModifySchemeActivity" />
         <activity android:name=".AddSchemeActivity" />
         <activity android:name=".ViewMilestoneActivity" />
